# maybe_main

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  benchmark_cpu.py  best.pt  blend_models.py  blended_model.pt  cityscapes_final.pt  code_flow_details.md  compare_models.py  dual_distilled_unet_best.pt  eval_restore_and_detect.py  last.pt  pyproject.toml  requirements.txt  run_image_restoration.py  run_realtime_demo.py  teacher_best.pt  test_shapes.py  train_cityscapes.py  train_distillation.py  train_dual_teacher.py  train_restore.py  train_unet.py  train_unet_from_pretrained.py  viva_preparation.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adverse_vision/: __init__.py
adverse_vision/data/: __init__.py  corruption.py  dataset.py  split.py
adverse_vision/eval/: __init__.py  detection_eval.py
adverse_vision/inference/: __init__.py  onnx_utils.py  pipeline.py
adverse_vision/models/: __init__.py  autoencoder.py  losses.py
adverse_vision/train/: __init__.py  trainer.py
adverse_vision/utils/: __init__.py  (+4 more)
artifacts/: history.json  report.json  train_summary.json
data/: corruption.py  dataset.py
docs/: ARCHITECTURE_EXPLAINED.md  BEGINNER_QUICKSTART.md  COMMAND_REFERENCE.md  CROSS_PLATFORM_SETUP.md  GITHUB_SETUP.md
inference/: pipeline.py
models/: autoencoder.py  restormer.py
scripts/: setup_unix.sh  setup_windows.ps1
tests/: test_corruption.py  test_model_io.py  test_pipeline.py  test_smoke_train.py
