[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adverse-vision-mvp"
version = "0.1.0"
description = "CPU-first adverse weather vision restoration and detection recovery MVP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Gunjan" }]
keywords = ["computer-vision", "pytorch", "image-restoration", "autonomous-driving", "yolo"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "torch>=2.2",
  "torchvision>=0.17",
  "ultralytics>=8.2",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "tqdm>=4.66",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
